k8s/streamlit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit-ui
  template:
    metadata:
      labels:
        app: streamlit-ui
    spec:
      containers:
      - name: streamlit-ui
        image: leticiamartins11/streamlit-ui:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8501
