k8s/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api
spec:
  type: ClusterIP
  selector:
    app: flask-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
