k8s/streamlit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-ui
spec:
  type: ClusterIP
  selector:
    app: streamlit-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
